# PolangInterpreter

./: CMakeLists.txt  README.md
src/: main.cc
src/interpreter/: baseFunctions.hpp  context.hpp  interpretable.h  interpreter.cc  interpreter.h  returnException.hpp
src/lexer/: abstract_lexer.h  lexer.cc  lexer.h  position.h  token.cc  token.h  token_type.hpp
src/parser/: expressions.hpp  parser.cc  parser.h  program.h  statements.hpp
src/reader/: abstract_reader.h  console_reader.cc  console_reader.h  file_reader.cc  file_reader.h  string_reader.cc  string_reader.h
tests/: interpreter_tests.cc  lexer_tests.cc  parser_tests.cc
